Merge branches
git-svn-id: https://svn.apache.org/repos/asf/cocoon/trunk@154564 13f79535-47bb-0310-9956-ffa450edef68